--- a/Table5/index.html
+++ b/Table5/index.html
@@ -31,13 +31,13 @@
             <td colspan="3" rowspan="3" style="padding-left: 100px;">Ethnicity</td>
             <td colspan="8" style="padding-left: 70px;">No. of Stations and Percent of Total</td>
         </tr>
-        <tr>
+        <tr style="text-align: center;">
             <td colspan="2">Nationality</td>
             <td colspan="2">Nielsen <br> DMA 1-50</td>
             <td colspan="2">DMA <br>51-100</td>
             <td colspan="2">DMA <br>101+</td>
         </tr>
-        <tr>
+        <tr style="text-align: center;">
             <td>No.</td>  
             <td>%</td>
             <td>No.</td>
@@ -47,7 +47,7 @@
             <td>No.</td>
             <td>%</td>
         </tr>
-        <tr>
+        <tr style="text-align: center;">
             <td colspan="2" rowspan="3">Hispanic of Latino</td>
             <td rowspan="3">Female <br> Male <br> Total </td>
             <td>96</td>
@@ -59,7 +59,7 @@
             <td>18</td>
             <td>4.1</td>
         </tr>
-        <tr>
+        <tr style="text-align: center;">
             <td>274</td>
             <td>22.1</td>
             <td>153</td>
@@ -69,7 +69,7 @@
             <td>65</td>
             <td>14.6</td>
         </tr>
-        <tr>
+        <tr style="text-align: center;">
             <td>322</td>
             <td>26.0</td>
             <td>186</td>
@@ -79,7 +79,7 @@
             <td>69</td>
             <td>15.5</td>
         </tr>
-        <tr>
+        <tr style="text-align: center;">
             <td colspan="2" rowspan="3">Non-Hispanic of Latino</td>
             <td rowspan="3">Female <br> Male <br> Total </td>
             <td>984</td>
@@ -91,7 +91,7 @@
             <td>307</td>
             <td>69.1</td>
         </tr>
-        <tr>
+        <tr style="text-align: center;">
             <td>1,201</td>
             <td>69.9</td>
             <td>458</td>
@@ -101,7 +101,7 @@
             <td>416</td>
             <td>93.7</td>
         </tr>
-        <tr>
+        <tr style="text-align: center;">
             <td>1,210</td>
             <td>97.7</td>
             <td>460</td>
@@ -111,7 +111,7 @@
             <td>421</td>
             <td>94.8</td>
         </tr>
-        <tr>
+        <tr style="text-align: center;">
             <td colspan="3">Total stations</td>
             <td>1,239</td>
             <td>100%</td>
@@ -122,7 +122,7 @@
             <td>444</td>
             <td>100%</td>
         </tr>
-        <tr>
+        <tr style="text-align: center;">
             <td colspan="3">Insufficient data</td>
             <td>147</td>
             <td>---</td>
@@ -133,7 +133,7 @@
             <td>42</td>
             <td>---</td>
         </tr>
-        <tr>
+        <tr style="text-align: center;">
             <td colspan="3">Stattions not field</td>
             <td>1</td>
             <td>---</td>
@@ -144,7 +144,7 @@
             <td>1</td>
             <td>---</td>
         </tr>
-        <tr>
+        <tr style="text-align: center;">
             <td colspan="3">All licensed station</td>
             <td>1,387</td>
             <td>---</td>
@@ -156,5 +156,12 @@
             <td>---</td>
         </tr>
   </table> 
-</body>
+</body><br><br>
+
+<h2>HTML TABLE 1,2,3,4,5</h2>
+<p>
+    <a href="../../Table/index.html">TABLE 1, 2</a>  <br><br>
+    <a href="../Table3/index.html">TABLE 3,4,5</a> <br><br>
+    <a href="/Form/index.html">REGISTRATION FORM</a>
+</p>
 </html>
