--- a/index.html
+++ b/index.html
@@ -74,3 +74,9 @@
         </tr>
     </tbody>
 </table>
+
+<h2>TABLE 3,4,5,6</h2>
+<a href="./Table3/index.html">TABLE 3,4,5</a> <br> <br>
+<a href="./Table5/index.html">TABLE 6</a> <br> <br>
+<a href="/Form/index.html">REGISTRATION FORM</a>
+</html>
